--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "serve": "nodemon app.js",
-	"start": "node app.js",
+	"start": "node app.js"
   },
   "engines": {
     "node": ">=20.13.0"
