--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "nodemon app.js",
-	"start": "node app.js"
+    "start": "node app.js",
+    "build": "node build",
+    "serve": "nodemon app.js"
   },
   "engines": {
     "node": ">=20.13.0"
