--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "sls-mysql",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "serve": "nodemon app.js"
+    "start": "node app.js"
   },
   "engines": {
     "node": ">=20.13.0"
